force-app/main/default/objects/openq__Segmentation_Row__c/openq__Segmentation_Row__c.object-meta.xml
<CustomObject>
    <label>Segmentation Row</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Segmentation Row Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segmentation Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>