force-app/main/default/objects/openq__Segmentation_Row__c/fields/openq__Condition__c.field-meta.xml
<CustomField>
    <fullName>openq__Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>openq__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>not equal to</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>less or equal</fullName>
            </value>
            <value>
                <fullName>greater or equal</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>does not contain</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>includes</fullName>
            </value>
            <value>
                <fullName>excludes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>