force-app/main/default/objects/openq__Segmentation_Row__c/fields/openq__Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>openq__Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>